Eclipse 4.34 (M3) JDT Patch for Groovy-Eclipse
https://github.com/eclipse-jdt/eclipse.jdt.core/releases/tag/S4_34_0_M3

for #1597 #1598