@@ -15,16 +15,16 @@ package org.eclipse.jdt.core.tests.compiler.regression;
 import java.io.File;
 import java.io.IOException;
 import java.util.Map;
-
+import junit.framework.Test;
 import org.eclipse.core.runtime.CoreException;
 import org.eclipse.jdt.core.JavaCore;
 import org.eclipse.jdt.core.ToolFactory;
+import org.eclipse.jdt.core.tests.compiler.regression.AbstractRegressionTest.JavacTestOptions.Excuse;
+import org.eclipse.jdt.core.tests.compiler.regression.AbstractRegressionTest.JavacTestOptions.JavacHasABug;
 import org.eclipse.jdt.core.tests.util.Util;
 import org.eclipse.jdt.core.util.ClassFileBytesDisassembler;
 import org.eclipse.jdt.core.util.ClassFormatException;
 import org.eclipse.jdt.internal.compiler.impl.CompilerOptions;
-
-import junit.framework.Test;
 
 public class SealedTypesTests extends AbstractRegressionTest9 {
 
@@ -44,6 +44,19 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 		super(testName);
 	}
 
+	// ========= OPT-IN to run.javac mode: ===========
+	@Override
+	protected void setUp() throws Exception {
+		this.runJavacOptIn = true;
+		super.setUp();
+	}
+	@Override
+	protected void tearDown() throws Exception {
+		super.tearDown();
+		this.runJavacOptIn = false; // do it last, so super can still clean up
+	}
+	// =================================================
+
 	// Enables the tests to run individually
 	protected Map<String, String> getCompilerOptions() {
 		Map<String, String> defaultOptions = super.getCompilerOptions();
@@ -53,6 +66,13 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 		defaultOptions.put(CompilerOptions.OPTION_ReportPreviewFeatures, CompilerOptions.IGNORE);
 		defaultOptions.put(CompilerOptions.OPTION_Store_Annotations, CompilerOptions.ENABLED);
 		return defaultOptions;
+	}
+
+	class Runner extends AbstractRegressionTest.Runner {
+		Runner() {
+			this.vmArguments = new String[0];
+			this.javacTestOptions = JavacTestOptions.DEFAULT;
+		}
 	}
 
 	@Override
@@ -65,44 +85,30 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 		Runner runner = new Runner();
 		runner.testFiles = testFiles;
 		runner.expectedOutputString = expectedOutput;
-		runner.vmArguments = new String[] {"--enable-preview"};
 		runner.customOptions = customOptions;
-		runner.javacTestOptions = JavacTestOptions.forReleaseWithPreview("17");
 		runner.runConformTest();
 	}
 	@Override
 	protected void runNegativeTest(String[] testFiles, String expectedCompilerLog) {
-		runNegativeTest(testFiles, expectedCompilerLog, JavacTestOptions.forReleaseWithPreview("17"));
+		runNegativeTest(testFiles, expectedCompilerLog, JavacTestOptions.DEFAULT);
 	}
 	protected void runWarningTest(String[] testFiles, String expectedCompilerLog) {
 		runWarningTest(testFiles, expectedCompilerLog, (Map<String, String>) null);
 	}
 	protected void runWarningTest(String[] testFiles, String expectedCompilerLog, Map<String, String> customOptions) {
-		runWarningTest(testFiles, expectedCompilerLog, customOptions, null);
+		Runner runner = new Runner();
+		runner.testFiles = testFiles;
+		runner.expectedCompilerLog = expectedCompilerLog;
+		runner.customOptions = customOptions;
+		runner.runWarningTest();
 	}
 
 	protected void runWarningTest(String[] testFiles, String expectedCompilerLog, String expectedOutput) {
-
 		Runner runner = new Runner();
 		runner.testFiles = testFiles;
 		runner.expectedCompilerLog = expectedCompilerLog;
 		runner.expectedOutputString = expectedOutput;
 		runner.customOptions = getCompilerOptions();
-		runner.vmArguments = new String[] {"--enable-preview"};
-		runner.javacTestOptions = JavacTestOptions.forReleaseWithPreview("16");
-		runner.runWarningTest();
-	}
-
-	protected void runWarningTest(String[] testFiles, String expectedCompilerLog,
-			Map<String, String> customOptions, String javacAdditionalTestOptions) {
-
-		Runner runner = new Runner();
-		runner.testFiles = testFiles;
-		runner.expectedCompilerLog = expectedCompilerLog;
-		runner.customOptions = customOptions;
-		runner.vmArguments = new String[] {"--enable-preview"};
-		runner.javacTestOptions = javacAdditionalTestOptions == null ? JavacTestOptions.forReleaseWithPreview("16") :
-			JavacTestOptions.forReleaseWithPreview("16", javacAdditionalTestOptions);
 		runner.runWarningTest();
 	}
 
@@ -256,7 +262,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"2. ERROR in X.java (at line 1)\n" +
 			"	sealed public sealed class X {\n" +
 			"	                           ^\n" +
-			"Sealed class or interface lacks the permits clause and no class or interface from the same compilation unit declares X as its direct superclass or superinterface\n" +
+			"Sealed type X lacks a permits clause and no type from the same compilation unit declares X as its direct supertype\n" +
 			"----------\n");
 	}
 	public void testBug562715_006() {
@@ -273,7 +279,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 1)\n" +
 			"	public sealed class X {\n" +
 			"	                    ^\n" +
-			"Sealed class or interface lacks the permits clause and no class or interface from the same compilation unit declares X as its direct superclass or superinterface\n" +
+			"Sealed type X lacks a permits clause and no type from the same compilation unit declares X as its direct supertype\n" +
 			"----------\n" +
 			"2. ERROR in X.java (at line 2)\n" +
 			"	public static sealed void main(String[] args){\n" +
@@ -338,7 +344,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 1)\n" +
 			"	public sealed class X permits {\n" +
 			"	                    ^\n" +
-			"Sealed class or interface lacks the permits clause and no class or interface from the same compilation unit declares X as its direct superclass or superinterface\n" +
+			"Sealed type X lacks a permits clause and no type from the same compilation unit declares X as its direct supertype\n" +
 			"----------\n" +
 			"2. ERROR in X.java (at line 1)\n" +
 			"	public sealed class X permits {\n" +
@@ -372,7 +378,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"2. ERROR in X.java (at line 2)\n" +
 			"	public sealed class X {\n" +
 			"	                    ^\n" +
-			"Sealed class or interface lacks the permits clause and no class or interface from the same compilation unit declares X as its direct superclass or superinterface\n" +
+			"Sealed type X lacks a permits clause and no type from the same compilation unit declares X as its direct supertype\n" +
 			"----------\n" +
 			"3. ERROR in X.java (at line 3)\n" +
 			"	public static sealed void main(String[] args){\n" +
@@ -400,7 +406,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"2. ERROR in X.java (at line 2)\n" +
 			"	public sealed class X {\n" +
 			"	                    ^\n" +
-			"Sealed class or interface lacks the permits clause and no class or interface from the same compilation unit declares X as its direct superclass or superinterface\n" +
+			"Sealed type X lacks a permits clause and no type from the same compilation unit declares X as its direct supertype\n" +
 			"----------\n" +
 			"3. ERROR in X.java (at line 3)\n" +
 			"	public static sealed void main(String[] args){\n" +
@@ -421,12 +427,12 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 1)\n" +
 			"	public sealed class X permits Y, Z{\n" +
 			"	                              ^\n" +
-			"Permitted class Y does not declare X as direct super class\n" +
+			"Permitted type Y does not declare X as a direct supertype\n" +
 			"----------\n" +
 			"2. ERROR in X.java (at line 1)\n" +
 			"	public sealed class X permits Y, Z{\n" +
 			"	                                 ^\n" +
-			"Permitted class Z does not declare X as direct super class\n" +
+			"Permitted type Z does not declare X as a direct supertype\n" +
 			"----------\n");
 	}
 	public void testBug563806_002() {
@@ -446,28 +452,28 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in p1\\X.java (at line 2)\n" +
 			"	public sealed class X permits Y{\n" +
 			"	                              ^\n" +
-			"Permitted class Y does not declare p1.X as direct super class\n" +
+			"Permitted type Y does not declare p1.X as a direct supertype\n" +
 			"----------\n" +
 			"2. ERROR in p1\\X.java (at line 5)\n" +
 			"	class Z extends X{}\n" +
 			"	      ^\n" +
-			"The class Z with a sealed direct superclass or a sealed direct superinterface X should be declared either final, sealed, or non-sealed\n" +
+			"The class Z with a sealed direct supertype X should be declared either final, sealed, or non-sealed\n" +
 			"----------\n" +
 			"3. ERROR in p1\\X.java (at line 5)\n" +
 			"	class Z extends X{}\n" +
 			"	                ^\n" +
-			"The type Z extending a sealed class X should be a permitted subtype of X\n" +
+			"The class Z cannot extend the class X as it is not a permitted subtype of X\n" +
 			"----------\n" +
 			"----------\n" +
 			"1. ERROR in p1\\A.java (at line 2)\n" +
 			"	public sealed class A extends X{}\n" +
 			"	                    ^\n" +
-			"Sealed class or interface lacks the permits clause and no class or interface from the same compilation unit declares A as its direct superclass or superinterface\n" +
+			"Sealed type A lacks a permits clause and no type from the same compilation unit declares A as its direct supertype\n" +
 			"----------\n" +
 			"2. ERROR in p1\\A.java (at line 2)\n" +
 			"	public sealed class A extends X{}\n" +
 			"	                              ^\n" +
-			"The type A extending a sealed class X should be a permitted subtype of X\n" +
+			"The class A cannot extend the class X as it is not a permitted subtype of X\n" +
 			"----------\n");
 	}
 	public void testBug563806_003() {
@@ -488,7 +494,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"2. ERROR in X.java (at line 3)\n" +
 			"	class Y implements X{}\n" +
 			"	      ^\n" +
-			"The class Y with a sealed direct superclass or a sealed direct superinterface X should be declared either final, sealed, or non-sealed\n" +
+			"The class Y with a sealed direct supertype X should be declared either final, sealed, or non-sealed\n" +
 			"----------\n");
 	}
 	public void testBug563806_004() {
@@ -515,7 +521,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"3. ERROR in p1\\X.java (at line 4)\n" +
 			"	class Y implements X{}\n" +
 			"	      ^\n" +
-			"The class Y with a sealed direct superclass or a sealed direct superinterface X should be declared either final, sealed, or non-sealed\n" +
+			"The class Y with a sealed direct supertype X should be declared either final, sealed, or non-sealed\n" +
 			"----------\n");
 	}
 	public void testBug563806_005() {
@@ -530,12 +536,12 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 1)\n" +
 			"	public sealed class X permits Y, Y{\n" +
 			"	                                 ^\n" +
-			"Duplicate type Y for the type X in the permits clause\n" +
+			"Duplicate permitted type Y\n" +
 			"----------\n" +
 			"2. ERROR in X.java (at line 3)\n" +
 			"	class Y extends X {}\n" +
 			"	      ^\n" +
-			"The class Y with a sealed direct superclass or a sealed direct superinterface X should be declared either final, sealed, or non-sealed\n" +
+			"The class Y with a sealed direct supertype X should be declared either final, sealed, or non-sealed\n" +
 			"----------\n");
 	}
 	public void testBug563806_006() {
@@ -551,12 +557,12 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in p1\\X.java (at line 2)\n" +
 			"	public sealed class X permits Y, p1.Y{\n" +
 			"	                                 ^^^^\n" +
-			"Duplicate type Y for the type X in the permits clause\n" +
+			"Duplicate permitted type Y\n" +
 			"----------\n" +
 			"2. ERROR in p1\\X.java (at line 4)\n" +
 			"	class Y extends X {}\n" +
 			"	      ^\n" +
-			"The class Y with a sealed direct superclass or a sealed direct superinterface X should be declared either final, sealed, or non-sealed\n" +
+			"The class Y with a sealed direct supertype X should be declared either final, sealed, or non-sealed\n" +
 			"----------\n");
 	}
 	public void testBug563806_007() {
@@ -571,7 +577,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 3)\n" +
 			"	non-sealed class Y extends X {}\n" +
 			"	                 ^\n" +
-			"A class Y declared as non-sealed should have either a sealed direct superclass or a sealed direct superinterface\n" +
+			"The non-sealed class Y must have a sealed direct supertype\n" +
 			"----------\n");
 	}
 	public void testBug563806_008() {
@@ -590,13 +596,13 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in p1\\X.java (at line 4)\n" +
 			"	class Y implements X{}\n" +
 			"	      ^\n" +
-			"The class Y with a sealed direct superclass or a sealed direct superinterface X should be declared either final, sealed, or non-sealed\n" +
+			"The class Y with a sealed direct supertype X should be declared either final, sealed, or non-sealed\n" +
 			"----------\n" +
 			"----------\n" +
 			"1. ERROR in p2\\Y.java (at line 2)\n" +
 			"	non-sealed public interface Y {}\n" +
 			"	                            ^\n" +
-			"An interface Y declared as non-sealed should have a sealed direct superinterface\n" +
+			"The non-sealed interface Y must have a sealed direct superinterface\n" +
 			"----------\n");
 	}
 	public void testBug563806_009() {
@@ -628,7 +634,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in p2\\Y.java (at line 2)\n" +
 			"	public final class Y extends p1.X{}\n" +
 			"	                             ^^^^\n" +
-			"Sealed type X and sub type Y in an unnamed module should be declared in the same package p1\n" +
+			"The class Y cannot extend the class X as it is not a permitted subtype of X\n" +
 			"----------\n");
 	}
 	public void testBug563806_011() {
@@ -662,7 +668,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in p2\\Y.java (at line 2)\n" +
 			"	public final class Y implements p1.X{}\n" +
 			"	                                ^^^^\n" +
-			"Sealed type X and sub type Y in an unnamed module should be declared in the same package p1\n" +
+			"The type Y that implements the sealed interface X should be a permitted subtype of X\n" +
 			"----------\n");
 	}
 	public void testBug563806_013() {
@@ -707,7 +713,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"2. ERROR in p2\\Y.java (at line 2)\n" +
 			"	public interface Y extends p1.X{}\n" +
 			"	                           ^^^^\n" +
-			"Sealed type X and sub type Y in an unnamed module should be declared in the same package p1\n" +
+			"The type Y that extends the sealed interface X should be a permitted subtype of X\n" +
 			"----------\n");
 	}
 	public void testBug563806_015() {
@@ -861,7 +867,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"2. ERROR in p1\\X.java (at line 2)\n" +
 			"	public sealed class X permits Y, p2.Y {\n" +
 			"	                                 ^^^^\n" +
-			"Permitted class Y does not declare p1.X as direct super class\n" +
+			"Permitted type Y does not declare p1.X as a direct supertype\n" +
 			"----------\n";
 		runner.runNegativeTest();
 	}
@@ -1072,12 +1078,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"2. ERROR in p1\\X.java (at line 2)\n" +
 			"	public sealed non-sealed interface X {\n" +
 			"	                                   ^\n" +
-			"Sealed class or interface lacks the permits clause and no class or interface from the same compilation unit declares X as its direct superclass or superinterface\n" +
-			"----------\n" +
-			"3. ERROR in p1\\X.java (at line 2)\n" +
-			"	public sealed non-sealed interface X {\n" +
-			"	                                   ^\n" +
-			"An interface X is declared both sealed and non-sealed\n" +
+			"Sealed type X lacks a permits clause and no type from the same compilation unit declares X as its direct supertype\n" +
 			"----------\n");
 	}
 	public void testBug563806_033() {
@@ -1143,7 +1144,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in p1\\X.java (at line 2)\n" +
 			"	public  non-sealed interface X {\n" +
 			"	                             ^\n" +
-			"An interface X declared as non-sealed should have a sealed direct superinterface\n" +
+			"The non-sealed interface X must have a sealed direct superinterface\n" +
 			"----------\n");
 	}
 	public void testBug563806_036() {
@@ -1221,12 +1222,12 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in p1\\X.java (at line 2)\n" +
 			"	sealed class A{}\n" +
 			"	             ^\n" +
-			"Sealed class or interface lacks the permits clause and no class or interface from the same compilation unit declares A as its direct superclass or superinterface\n" +
+			"Sealed type A lacks a permits clause and no type from the same compilation unit declares A as its direct supertype\n" +
 			"----------\n" +
 			"2. ERROR in p1\\X.java (at line 5)\n" +
 			"	class Y extends A{}\n" +
 			"	                ^\n" +
-			"A local class Y cannot have a sealed direct superclass or a sealed direct superinterface A\n" +
+			"The local type Y may not have a sealed supertype A\n" +
 			"----------\n");
 	}
 	public void testBug564191_001() throws IOException, ClassFormatException {
@@ -1331,7 +1332,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 				"1. ERROR in p1\\X.java (at line 3)\n" +
 				"	class Y extends X {}\n" +
 				"	      ^\n" +
-				"The class Y with a sealed direct superclass or a sealed direct superinterface X should be declared either final, sealed, or non-sealed\n" +
+				"The class Y with a sealed direct supertype X should be declared either final, sealed, or non-sealed\n" +
 				"----------\n");
 	}
 	// Test that implicit permitted member type with implicit permitted types
@@ -1350,7 +1351,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 				"1. ERROR in p1\\X.java (at line 3)\n" +
 				"	sealed class Y extends X {}\n" +
 				"	             ^\n" +
-				"Sealed class or interface lacks the permits clause and no class or interface from the same compilation unit declares Y as its direct superclass or superinterface\n" +
+				"Sealed type Y lacks a permits clause and no type from the same compilation unit declares Y as its direct supertype\n" +
 				"----------\n");
 	}
 	// Test that implicit permitted member type with explicit permits clause
@@ -1369,7 +1370,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 				"1. ERROR in p1\\X.java (at line 3)\n" +
 				"	sealed class Y extends X permits Z {}\n" +
 				"	                                 ^\n" +
-				"Permitted class Z does not declare p1.X.Y as direct super class\n" +
+				"Permitted type Z does not declare p1.X.Y as a direct supertype\n" +
 				"----------\n");
 	}
 	// Test that implicit permitted member type with explicit permits clause
@@ -1385,7 +1386,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 				"1. ERROR in p1\\X.java (at line 2)\n" +
 				"	sealed interface SI {}\n" +
 				"	                 ^^\n" +
-				"Sealed class or interface lacks the permits clause and no class or interface from the same compilation unit declares SI as its direct superclass or superinterface\n" +
+				"Sealed type SI lacks a permits clause and no type from the same compilation unit declares SI as its direct supertype\n" +
 				"----------\n");
 	}
 	public void testBug564450_001() throws IOException, ClassFormatException {
@@ -1404,7 +1405,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 				"1. ERROR in p1\\Y.java (at line 2)\n" +
 				"	class Y extends X {\n" +
 				"	      ^\n" +
-				"The class Y with a sealed direct superclass or a sealed direct superinterface X should be declared either final, sealed, or non-sealed\n" +
+				"The class Y with a sealed direct supertype X should be declared either final, sealed, or non-sealed\n" +
 				"----------\n");
 	}
 	public void testBug564047_001() throws CoreException, IOException {
@@ -1441,12 +1442,12 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 				"1. ERROR in src\\p\\X.java (at line 2)\n" +
 				"	public class X extends Y {\n" +
 				"	             ^\n" +
-				"The class X with a sealed direct superclass or a sealed direct superinterface Y should be declared either final, sealed, or non-sealed\n" +
+				"The class X with a sealed direct supertype Y should be declared either final, sealed, or non-sealed\n" +
 				"----------\n" +
 				"2. ERROR in src\\p\\X.java (at line 2)\n" +
 				"	public class X extends Y {\n" +
 				"	                       ^\n" +
-				"The type X extending a sealed class Y should be a permitted subtype of Y\n" +
+				"The class X cannot extend the class Y as it is not a permitted subtype of Y\n" +
 				"----------\n",
 				libs,
 		        true);
@@ -1586,8 +1587,8 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 				"");
 			String expectedOutput =
 					"PermittedSubclasses:\n" +
-					"   #22 p1/A$Z,\n" +
-					"   #24 p1/A$SubY\n" +
+					"   #22 p1/A$SubY,\n" +
+					"   #24 p1/A$Z\n" +
 					"}";
 			verifyClassFile(expectedOutput, "p1/A$Y.class", ClassFileBytesDisassembler.SYSTEM);
 			expectedOutput =
@@ -1614,9 +1615,9 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 				"");
 			String expectedOutput =
 					"PermittedSubclasses:\n" +
-					"   #24 p1/A$Y$SubInnerY,\n" +
-					"   #26 p1/A$Z,\n" +
-					"   #28 p1/A$SubY\n";
+					"   #24 p1/A$SubY,\n" +
+					"   #26 p1/A$Y$SubInnerY,\n" +
+					"   #28 p1/A$Z\n";
 			verifyClassFile(expectedOutput, "p1/A$Y.class", ClassFileBytesDisassembler.SYSTEM);
 	}
 	public void testBug564498_4() throws IOException, ClassFormatException {
@@ -1663,7 +1664,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 				"2. ERROR in p1\\X.java (at line 7)\n" +
 				"	final class SubInnerY extends Y {}\n" +
 				"	                              ^\n" +
-				"The type SubInnerY extending a sealed class A.Y should be a permitted subtype of A.Y\n" +
+				"The class SubInnerY cannot extend the class A.Y as it is not a permitted subtype of A.Y\n" +
 				"----------\n");
 	}
 	// accept references of membertype without qualifier of enclosing type in permits clause
@@ -5341,13 +5342,13 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 1)\n" +
 			"	public sealed interface X{}\n" +
 			"	                        ^\n" +
-			"Sealed class or interface lacks the permits clause and no class or interface from the same compilation unit declares X as its direct superclass or superinterface\n" +
+			"Sealed type X lacks a permits clause and no type from the same compilation unit declares X as its direct supertype\n" +
 			"----------\n" +
 			"----------\n" +
 			"1. ERROR in Y.java (at line 1)\n" +
 			"	public final class Y implements X{}\n" +
 			"	                                ^\n" +
-			"The type Y that implements a sealed interface X should be a permitted subtype of X\n" +
+			"The type Y that implements the sealed interface X should be a permitted subtype of X\n" +
 			"----------\n");
 	}
 	public void testBug569522_001() throws IOException, ClassFormatException {
@@ -5430,7 +5431,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 4)\n" +
 			"	record B() implements Foo {}\n" +
 			"	                      ^^^\n" +
-			"The type B that implements a sealed interface X.Foo should be a permitted subtype of X.Foo\n" +
+			"The type B that implements the sealed interface X.Foo should be a permitted subtype of X.Foo\n" +
 			"----------\n");
 	}
 	public void testBug568854_002() {
@@ -5447,7 +5448,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 4)\n" +
 			"	record B() implements Foo {}\n" +
 			"	                      ^^^\n" +
-			"The type B that implements a sealed interface Foo should be a permitted subtype of Foo\n" +
+			"The type B that implements the sealed interface Foo should be a permitted subtype of Foo\n" +
 			"----------\n");
 	}
 	public void testBug568854_003() {
@@ -5464,7 +5465,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 3)\n" +
 			"	record B() implements Foo {}\n" +
 			"	                      ^^^\n" +
-			"The type B that implements a sealed interface Foo should be a permitted subtype of Foo\n" +
+			"The type B that implements the sealed interface Foo should be a permitted subtype of Foo\n" +
 			"----------\n");
 	}
 	public void testBug568854_004() {
@@ -5481,12 +5482,12 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 3)\n" +
 			"	class A implements Foo {}\n" +
 			"	      ^\n" +
-			"The class A with a sealed direct superclass or a sealed direct superinterface X.Foo should be declared either final, sealed, or non-sealed\n" +
+			"The class A with a sealed direct supertype X.Foo should be declared either final, sealed, or non-sealed\n" +
 			"----------\n" +
 			"2. ERROR in X.java (at line 4)\n" +
 			"	final class B implements Foo {}\n" +
 			"	                         ^^^\n" +
-			"The type B that implements a sealed interface X.Foo should be a permitted subtype of X.Foo\n" +
+			"The type B that implements the sealed interface X.Foo should be a permitted subtype of X.Foo\n" +
 			"----------\n");
 	}
 	public void testBug568854_005() {
@@ -5503,12 +5504,12 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 3)\n" +
 			"	class A implements Foo {}\n" +
 			"	      ^\n" +
-			"The class A with a sealed direct superclass or a sealed direct superinterface Foo should be declared either final, sealed, or non-sealed\n" +
+			"The class A with a sealed direct supertype Foo should be declared either final, sealed, or non-sealed\n" +
 			"----------\n" +
 			"2. ERROR in X.java (at line 4)\n" +
 			"	final class B implements Foo {}\n" +
 			"	                         ^^^\n" +
-			"The type B that implements a sealed interface Foo should be a permitted subtype of Foo\n" +
+			"The type B that implements the sealed interface Foo should be a permitted subtype of Foo\n" +
 			"----------\n");
 	}
 	public void testBug568854_006() {
@@ -5525,12 +5526,12 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 2)\n" +
 			"	class A implements Foo {}\n" +
 			"	      ^\n" +
-			"The class A with a sealed direct superclass or a sealed direct superinterface Foo should be declared either final, sealed, or non-sealed\n" +
+			"The class A with a sealed direct supertype Foo should be declared either final, sealed, or non-sealed\n" +
 			"----------\n" +
 			"2. ERROR in X.java (at line 3)\n" +
 			"	final class B implements Foo {}\n" +
 			"	                         ^^^\n" +
-			"The type B that implements a sealed interface Foo should be a permitted subtype of Foo\n" +
+			"The type B that implements the sealed interface Foo should be a permitted subtype of Foo\n" +
 			"----------\n");
 	}
 	public void testBug568854_007() {
@@ -5554,12 +5555,12 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 5)\n" +
 			"	class Y implements I {}\n" +
 			"	                   ^\n" +
-			"A local class Y cannot have a sealed direct superclass or a sealed direct superinterface I\n" +
+			"The local type Y may not have a sealed supertype I\n" +
 			"----------\n" +
 			"2. ERROR in X.java (at line 10)\n" +
 			"	class Z implements I{}\n" +
 			"	                   ^\n" +
-			"A local class Z cannot have a sealed direct superclass or a sealed direct superinterface I\n" +
+			"The local type Z may not have a sealed supertype I\n" +
 			"----------\n");
 	}
 	public void testBug568854_008() {
@@ -5583,12 +5584,12 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 6)\n" +
 			"	class Y implements I {}\n" +
 			"	                   ^\n" +
-			"A local class Y cannot have a sealed direct superclass or a sealed direct superinterface I\n" +
+			"The local type Y may not have a sealed supertype I\n" +
 			"----------\n" +
 			"2. ERROR in X.java (at line 10)\n" +
 			"	class Z implements I{}\n" +
 			"	                   ^\n" +
-			"A local class Z cannot have a sealed direct superclass or a sealed direct superinterface I\n" +
+			"The local type Z may not have a sealed supertype I\n" +
 			"----------\n");
 	}
 	public void testBug571332_001() {
@@ -5630,7 +5631,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 				"1. ERROR in X.java (at line 6)\n" +
 				"	class L extends Y {}\n" +
 				"	                ^\n" +
-				"A local class L cannot have a sealed direct superclass or a sealed direct superinterface Y\n" +
+				"The local type L may not have a sealed supertype Y\n" +
 				"----------\n");
 	}
 	public void testBug570218_001() {
@@ -5676,12 +5677,12 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			"1. ERROR in X.java (at line 3)\n" +
 			"	class Circle implements Shape{}\n" +
 			"	                        ^^^^^\n" +
-			"A local class Circle cannot have a sealed direct superclass or a sealed direct superinterface X.Shape\n" +
+			"The local type Circle may not have a sealed supertype X.Shape\n" +
 			"----------\n" +
 			"2. ERROR in X.java (at line 5)\n" +
 			"	sealed interface Shape {}\n" +
 			"	                 ^^^^^\n" +
-			"Sealed class or interface lacks the permits clause and no class or interface from the same compilation unit declares Shape as its direct superclass or superinterface\n" +
+			"Sealed type Shape lacks a permits clause and no type from the same compilation unit declares Shape as its direct supertype\n" +
 			"----------\n");
 	}
 	public void testBug573450_001() {
@@ -5773,7 +5774,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 				"2. ERROR in X.java (at line 2)\n" +
 				"	final class Y extends X {}\n" +
 				"	                      ^\n" +
-				"The type Y extending a sealed class X should be a permitted subtype of X\n" +
+				"The class Y cannot extend the class X as it is not a permitted subtype of X\n" +
 				"----------\n");
 	}
 	public void testBug578619_1() {
@@ -5813,7 +5814,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 				"2. ERROR in Bug578619.java (at line 8)\n" +
 				"	non-sealed interface I3 extends I2 {}\n" +
 				"	                     ^^\n" +
-				"An interface I3 declared as non-sealed should have a sealed direct superinterface\n" +
+				"The non-sealed interface I3 must have a sealed direct superinterface\n" +
 				"----------\n");
 	}
 	// https://bugs.eclipse.org/bugs/show_bug.cgi?id=576378
@@ -6000,7 +6001,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 				"2. ERROR in X.java (at line 2)\n" +
 				"	record B(int data) implements X {}\n" +
 				"	                              ^\n" +
-				"The type B that implements a sealed interface X should be a permitted subtype of X\n" +
+				"The type B that implements the sealed interface X should be a permitted subtype of X\n" +
 				"----------\n");
 	}
 
@@ -6046,7 +6047,8 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/1808
 	// [sealed-classes] Incorrect unused import warning
 	public void testIssue1808_4() {
-		runWarningTest(
+		Runner runner = new Runner();
+		runner.testFiles =
 				new String[] {
 						"foo/X.java",
 						"""
@@ -6059,16 +6061,18 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 					        }
 						}
 						"""
-				},
-
+				};
+		runner.expectedCompilerLog =
 				"----------\n"
 				+ "1. WARNING in foo\\X.java (at line 2)\n"
 				+ "	import foo.X.B;\n"
 				+ "	       ^^^^^^^\n"
 				+ "The import foo.X.B is never used\n"
-				+ "----------\n",
-
-				"Compiled and ran fine!");
+				+ "----------\n";
+		runner.expectedOutputString =
+				"Compiled and ran fine!";
+		runner.javacTestOptions = Excuse.EclipseHasSomeMoreWarnings;
+		runner.runWarningTest();
 	}
 
 	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/2595
@@ -6309,7 +6313,7 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 				"1. ERROR in X.java (at line 1)\n" +
 				"	non-sealed public class X {\n" +
 				"	                        ^\n" +
-				"A class X declared as non-sealed should have either a sealed direct superclass or a sealed direct superinterface\n" +
+				"The non-sealed class X must have a sealed direct supertype\n" +
 				"----------\n");
 	}
 
@@ -6401,5 +6405,495 @@ public class SealedTypesTests extends AbstractRegressionTest9 {
 			    "	                       ^\n" +
 			    "The type Y may have only one modifier out of sealed, non-sealed, and final\n" +
 			    "----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3100
+	// [Sealed types] Duplicate diagnostics for illegal modifier combination
+	public void testIssue3100() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						public sealed non-sealed interface X {}
+						final class Y implements X  {}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 1)\n" +
+				"	public sealed non-sealed interface X {}\n" +
+				"	                                   ^\n" +
+				"The type X may have only one modifier out of sealed, non-sealed, and final\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3144
+	// [Sealed types] Diagnostic can be more direct when a @FunctionalInterface is declared sealed
+	public void testIssue3144() {
+		runNegativeTest(
+				new String[] {
+						"I.java",
+						"""
+						@FunctionalInterface
+						public sealed interface I { void doit(); }
+						final class Y implements I  { public void doit() {} }
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in I.java (at line 2)\n" +
+				"	public sealed interface I { void doit(); }\n" +
+				"	                        ^\n" +
+				"A functional interface may not be declared sealed\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3039
+	// [Sealed types] Broken program crashes the compiler
+	public void testIssue3039() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						public sealed class X permits X.C {
+						    private final static class C extends X implements I {}
+						}
+
+						sealed interface I permits X.C {}
+						record R(X.C xc, R.C rc) {
+						    private class C {}
+						}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 5)\n" +
+				"	sealed interface I permits X.C {}\n" +
+				"	                           ^^^\n" +
+				"The type X.C is not visible\n" +
+				"----------\n" +
+				"2. ERROR in X.java (at line 6)\n" +
+				"	record R(X.C xc, R.C rc) {\n" +
+				"	         ^^^\n" +
+				"The type X.C is not visible\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3039
+	// [Sealed types] Broken program crashes the compiler
+	public void testIssue3039_2() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						public interface X {
+
+						  static <T extends Object & I2> Integer get(T object) {
+						    return switch (object) {
+						      case A ignored -> 42;
+						      default -> 42;
+						    };
+						  }
+
+						  public abstract sealed interface I2 permits , AB {
+						  }
+
+
+						  final class AB implements I2 {}
+
+						}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 1)\n" +
+				"	public interface X {\n" +
+				"	                   ^\n" +
+				"Syntax error, insert \"}\" to complete InterfaceBody\n" +
+				"----------\n" +
+				"2. ERROR in X.java (at line 3)\n" +
+				"	static <T extends Object & I2> Integer get(T object) {\n" +
+				"	                           ^^\n" +
+				"I2 cannot be resolved to a type\n" +
+				"----------\n" +
+				"3. ERROR in X.java (at line 5)\n" +
+				"	case A ignored -> 42;\n" +
+				"	     ^^^^^^^^^\n" +
+				"The Java feature 'Pattern Matching in Switch' is only available with source level 21 and above\n" +
+				"----------\n" +
+				"4. ERROR in X.java (at line 8)\n" +
+				"	}\n" +
+				"	^\n" +
+				"Syntax error on token \"}\", delete this token\n" +
+				"----------\n" +
+				"5. ERROR in X.java (at line 10)\n" +
+				"	public abstract sealed interface I2 permits , AB {\n" +
+				"	                                 ^^\n" +
+				"Syntax error on token \"I2\", permits expected after this token\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3121
+	// [Sealed types] Regression in instanceof check for sealed generic classes
+	public void testIssue3121() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						interface SuperInt {}
+
+						abstract sealed class Maybe<N extends Number> {
+							final class Maybe1 extends Maybe<Long> {}
+							final class Maybe2 extends Maybe<Long> implements SuperInt {}
+						}
+
+
+						abstract sealed class SurelyNot<N extends Number> {
+							final class SurelyNot1 extends SurelyNot<Long> {}
+							final class SurelyNot2 extends SurelyNot<Long> {}
+						}
+
+						abstract sealed class SurelyYes<N extends Number> {
+							final class SurelyYes1 extends SurelyYes<Long> implements SuperInt {}
+							final class SurelyYes2 extends SurelyYes<Long> implements SuperInt {}
+						}
+
+						class Test {
+
+							void testMaybe(Maybe<?> maybe, SurelyNot<?> surelyNot, SurelyYes<?> surelyYes) {
+								if (maybe == null || surelyNot == null || surelyYes == null) return;
+								if (maybe instanceof SuperInt sup) {}
+								if (surelyNot instanceof SuperInt sup) {}
+								if (surelyYes instanceof SuperInt sup) {}
+							}
+						}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 24)\n" +
+				"	if (surelyNot instanceof SuperInt sup) {}\n" +
+				"	    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
+				"Incompatible conditional operand types SurelyNot<capture#5-of ?> and SuperInt\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3121
+	// [Sealed types] Regression in instanceof check for sealed generic classes
+	public void testIssue3121_2() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						interface SuperInt {}
+
+						class Outer<T> {
+							abstract sealed class Maybe<N extends Number> {
+								final class Maybe1 extends Maybe<Long> {}
+							}
+						}
+
+						class Test {
+
+							void testMaybe(Outer<String>.Maybe<?> maybe) {
+								if (maybe instanceof SuperInt sup) {}
+								return null;
+							}
+						}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 12)\n" +
+				"	if (maybe instanceof SuperInt sup) {}\n" +
+				"	    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
+				"Incompatible conditional operand types Outer<String>.Maybe<capture#1-of ?> and SuperInt\n" +
+				"----------\n" +
+				"2. ERROR in X.java (at line 13)\n" +
+				"	return null;\n" +
+				"	^^^^^^^^^^^^\n" +
+				"Void methods cannot return a value\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3121
+	// [Sealed types] Regression in instanceof check for sealed generic classes
+	public void testIssue3121_2_1() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						interface SuperInt {}
+
+						class Outer<T> {
+							abstract sealed class Maybe<N extends Number> {
+								final class Maybe1 extends Maybe<Long> implements SuperInt {}
+							}
+						}
+
+						class Test {
+
+							void testMaybe(Outer<String>.Maybe<?> maybe) {
+								if (maybe instanceof SuperInt sup) {}
+								return null;
+							}
+						}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 13)\n" +
+				"	return null;\n" +
+				"	^^^^^^^^^^^^\n" +
+				"Void methods cannot return a value\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3121
+	// [Sealed types] Regression in instanceof check for sealed generic classes
+	public void testIssue3121_3() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						interface SuperInt {}
+
+						class Outer<T> {
+							abstract sealed class Maybe<N extends Number> {
+								final class Maybe1 extends Outer<Test>.Maybe<Long> {}
+							}
+						}
+
+						class Test {
+
+							void testMaybe(Outer<Test>.Maybe<?> maybe) {
+								if (maybe == null) return;
+								if (maybe instanceof SuperInt sup) {}
+							}
+						}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 13)\n" +
+				"	if (maybe instanceof SuperInt sup) {}\n" +
+				"	    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
+				"Incompatible conditional operand types Outer<Test>.Maybe<capture#2-of ?> and SuperInt\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3121
+	// [Sealed types] Regression in instanceof check for sealed generic classes
+	public void testIssue3121_4() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						interface SuperInt {}
+
+						class Outer<T> {
+							abstract sealed class Maybe<N extends Number> {
+								final class Maybe1 extends Outer<Test>.Maybe<Long> implements SuperInt {}
+							}
+						}
+
+						class Test {
+
+							void testMaybe(Outer<Test>.Maybe<?> maybe) {
+								if (maybe == null) return;
+								if (maybe instanceof SuperInt sup) {}
+								return null;
+							}
+						}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 14)\n" +
+				"	return null;\n" +
+				"	^^^^^^^^^^^^\n" +
+				"Void methods cannot return a value\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3121
+	// [Sealed types] Regression in instanceof check for sealed generic classes
+	// NOTE: javac does not report error#1 but that looks like a defect
+	public void testIssue3121_5() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						interface SuperInt {}
+
+						class Outer<T> {
+							abstract sealed class Maybe<N extends Number> {
+								final class Maybe1 extends Outer<Test>.Maybe<Long> implements SuperInt {}
+							}
+						}
+
+						class Test {
+
+							void testMaybe(Outer<String>.Maybe<?> maybe) {
+								if (maybe == null) return;
+								if (maybe instanceof SuperInt sup) {}
+								return null;
+							}
+						}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 13)\n" +
+				"	if (maybe instanceof SuperInt sup) {}\n" +
+				"	    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
+				"Incompatible conditional operand types Outer<String>.Maybe<capture#2-of ?> and SuperInt\n" +
+				"----------\n" +
+				"2. ERROR in X.java (at line 14)\n" +
+				"	return null;\n" +
+				"	^^^^^^^^^^^^\n" +
+				"Void methods cannot return a value\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3007
+	// [Sealed types] Extra and spurious error messages with faulty type sealing
+	public void testIssue3007() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						public sealed class X extends Y<String> permits Y {
+							int yield () {
+								return this.yield();
+							}
+						}
+
+						sealed class Y<T> extends X permits X, Z {
+
+						}
+
+						final class Z extends Y<String> {}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 1)\n" +
+				"	public sealed class X extends Y<String> permits Y {\n" +
+				"	                    ^\n" +
+				"The hierarchy of the type X is inconsistent\n" +
+				"----------\n" +
+				"2. ERROR in X.java (at line 7)\n" +
+				"	sealed class Y<T> extends X permits X, Z {\n" +
+				"	                          ^\n" +
+				"Cycle detected: a cycle exists in the type hierarchy between Y<T> and X\n" +
+				"----------\n" +
+				"3. ERROR in X.java (at line 11)\n" +
+				"	final class Z extends Y<String> {}\n" +
+				"	            ^\n" +
+				"The hierarchy of the type Z is inconsistent\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/3007
+	// [Sealed types] Extra and spurious error messages with faulty type sealing
+	public void testIssue3007_2() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						public class X extends Y<String> {
+							int yield () {
+								return this.yield();
+							}
+						}
+
+						class Y<T> extends X {
+
+						}
+
+						final class Z extends Y<String> {}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 1)\n" +
+				"	public class X extends Y<String> {\n" +
+				"	             ^\n" +
+				"The hierarchy of the type X is inconsistent\n" +
+				"----------\n" +
+				"2. ERROR in X.java (at line 7)\n" +
+				"	class Y<T> extends X {\n" +
+				"	                   ^\n" +
+				"Cycle detected: a cycle exists in the type hierarchy between Y<T> and X\n" +
+				"----------\n" +
+				"3. ERROR in X.java (at line 11)\n" +
+				"	final class Z extends Y<String> {}\n" +
+				"	            ^\n" +
+				"The hierarchy of the type Z is inconsistent\n" +
+				"----------\n");
+	}
+
+	// https://github.com/eclipse-jdt/eclipse.jdt.core/issues/2709
+	// [Sealed types] Disjointness behavior difference vis a vis javac
+	/* A class named C is disjoint from an interface named I if (i) it is not the case that C <: I, and (ii) one of the following cases applies:
+	– C is freely extensible (§8.1.1.2), and I is sealed, and C is disjoint from all of the permitted direct subclasses and subinterfaces of I.
+	*/
+	public void testIssue2709() {
+		runNegativeTest(
+				new String[] {
+						"X.java",
+						"""
+						public class X {
+						    sealed interface I permits C1 {}
+						    non-sealed class C1 implements I {}
+						    class C2 extends C1 {}
+						    class C3 {}
+						    {
+						        I i;
+						        i = (I) (C1) null;
+						        i = (I) (C2) null;
+						        i = (I) (C3) null;
+						        i = (C2) (C3) null;
+						        i = (C1) (C3) null;
+						    }
+						}
+						"""
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 10)\n" +
+				"	i = (I) (C3) null;\n" +
+				"	    ^^^^^^^^^^^^^\n" +
+				"Cannot cast from X.C3 to X.I\n" +
+				"----------\n" +
+				"2. ERROR in X.java (at line 11)\n" +
+				"	i = (C2) (C3) null;\n" +
+				"	    ^^^^^^^^^^^^^^\n" +
+				"Cannot cast from X.C3 to X.C2\n" +
+				"----------\n" +
+				"3. ERROR in X.java (at line 12)\n" +
+				"	i = (C1) (C3) null;\n" +
+				"	    ^^^^^^^^^^^^^^\n" +
+				"Cannot cast from X.C3 to X.C1\n" +
+				"----------\n");
+	}
+
+	public void testJDK8343306() {
+		Runner runner = new Runner();
+		runner.testFiles = new String[] {
+				"X1.java",
+				"""
+				public class X1 {
+				    sealed interface I permits C1 {}
+				    non-sealed class C1 implements I {}
+				    class C2 extends C1 {}
+				    class C3 {}
+				    I m2(int s, C3 c3) {
+				        return switch (s) {
+				            case 0 -> (I) c3;
+				            default -> null;
+				        };
+				    }
+				}
+				"""};
+		runner.expectedCompilerLog =
+				"""
+				----------
+				1. ERROR in X1.java (at line 8)
+					case 0 -> (I) c3;
+					          ^^^^^^
+				Cannot cast from X1.C3 to X1.I
+				----------
+				""";
+		runner.javacTestOptions = JavacHasABug.JavacBug8343306;
+		runner.runNegativeTest();
 	}
 }
